JumpScript/tests/baselines/reference/asyncEnum_es5.errors.txt
tests/cases/conformance/async/es5/asyncEnum_es5.jump(1,1): error TS1042: 'async' modifier cannot be used here.


==== tests/cases/conformance/async/es5/asyncEnum_es5.jump (1 errors) ====
    async enum E {
    ~~~~~
!!! error TS1042: 'async' modifier cannot be used here.
      Value
    }